--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,173 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.attribution { font-size: 11px; text-align: center; }
+.attribution a { color: hsl(228, 45%, 44%); }
+
+/* base */
+
+:root {
+    --Very-Dark-Gray: hsl(0, 0%, 17%);
+    --Dark-Gray: hsl(0, 0%, 59%);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.map{
+  height: 100vh;  z-index: 1;
 }
+
+  
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    text-align: center;
+    Font-size: 18px;
+    font-family: 'Rubik', sans-serif;
+    background-image: url(../public/images/pattern-bg.png);
+    background-repeat: no-repeat;
+    background-size: 100% 300px;
+}
+
+h4{
+    color: var(--Dark-Gray);
+    font-size: 13px;
+    letter-spacing: 1px;
+}
+h2{
+    font-weight: 500;
+    font-size: 25px;
+}
+/* header-div */
+
+.header-div{
+    color: whitesmoke;
+    letter-spacing: 1px;
+}
+.header-div > h2{
+    margin-top: 25px;
+    margin-bottom: 25px;
+    font-size: 30px;
+}
+/* input-div */
+.input-div{
+    width: 500px;
+    position: relative;
+    margin: 0 auto;
+}
+
+@media only screen and (max-width: 600px) {
+    .input-div{
+       width: 90%;
+    }
+  }
+
+.input-div > input{
+    width: 100%;
+    display: block;
+    padding: 15px 25px ;
+    border: none;
+    outline: none;
+    font-size: 20px;
+    border-radius: 15px;
+    
+}
+.input-div > input:hover, .input-div > input:hover{
+    cursor: pointer;
+}
+
+
+.input-div > button{
+    position: absolute;
+    right: 0;
+    top: 0;
+    outline: none;
+    border: none;
+    background-color: var(--Very-Dark-Gray);
+    background-image: url(../public/images/icon-arrow.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 65px;
+    height: 100%;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+.input-div > button:hover, .input-div > button:active {
+    background-color: rgb(59, 59, 59);
+    cursor: pointer;
+}
+
+
+/* info-div */
+.info-map-div{
+    position: relative;
+    margin-top: 120px;
+}
+.info-div{
+    display: flex;
+    background-color: white;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    z-index: 2;
+    padding: 30px;
+    border-radius: 15px;
+    gap: 30px;
+    width: 900px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+@media only screen and (max-width: 900px) {
+    .info-div {
+       flex-direction: column;
+        width: 70%;
+        top: 90px;
+    }
+  }
+  @media only screen and (max-width: 600px) {
+    .info-div {
+        width: 90%;
+    }
+  }
+
+
+.info-div > div{
+    text-align: left;
+    width: 25%;
+    position: relative;
+}
+@media only screen and (max-width: 900px) {
+    .info-div > div{
+       text-align: center;
+       width: 100%;
+    }
+}
+
+
+.info-div > div > h2{
+    margin-top: 15px;
+    line-height: 29px;
+}
+@media only screen and (max-width: 900px) {
+    .info-div >div>h2{
+       margin-top: 10px;
+    }
+}
+
+
+.info-div > div:not(:last-child)::before{
+    content: "";
+    position: absolute;
+    background-color: rgb(168, 167, 167);
+    width: 1px;
+    height: 75%;
+    right: 0;
+    top: 10px;
+}
+
+@media only screen and (max-width: 900px) {
+    .info-div > div:not(:last-child)::before {
+       display: none;
+    }
+  }
